# coral-ir

./: Cargo.toml  TODO.md  rustfmt.toml
scripts/: test.sh
src/: architecture.rs  checking.rs  language.rs  lib.rs  luau.rs  operations.rs  store.rs  types.rs
src/language/: features.rs  lexer.rs  parser.rs  scope.rs
src/luau/: coral.luau  hacks.rs  moon.luau  moon.rs  permissive.rs  test.luau
src/luau/moon/: class.luau  clone.rs  coerce.rs  console.rs  function.rs  globals.d.luau  symbol.luau
tests/: demo.coral  main.rs
