[package]
name = "coral-ir"
version = "0.0.0"
edition = "2024"

[dependencies]
logos = "0.16.1"
mlua = { version = "0.11", features = ["luau", "macros", "serde", "userdata-wrappers"] } # TODO: Add 'module'?
mlua-magic-macros = "0.2.0"
rand = "0.10.1"
strum = { version = "0.26", features = ["derive"] }
thiserror = "^2"
